Broadcast a usuarios de conversacion de chat

--- a/static/index.html
+++ b/static/index.html
@@ -3,32 +3,54 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Index Demo</title>
-	<script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
-    <script src="bower_components/jquery-simple-websocket/dist/jquery.simple.websocket.min.js" type="text/javascript"></script>
+	<link href="http://localhost:8888/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+  	<link rel="shortcut icon" href="http://localhost:8888/static/favicon.ico">
+	<script src="http://localhost:8888/static/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="http://localhost:8888/static/bower_components/jquery-simple-websocket/dist/jquery.simple.websocket.min.js" type="text/javascript"></script>
 </head>
 <body>
-	<h1>Prueba Web Sockets</h1>
-	idEmpresa <input type="text" name="" id="idEmpresa" value="1"><br>
-	idUsuario <input type="text" name="" id="idUSuario" value="1"><br>
-	idConversacion <input type="text" name="" id="idConversacion"><br>
-	Mensaje:<br>
-	<textarea id="texto"></textarea><br>
-	<button id="btnConectarse">Conectarse</button><button id="btnEnviar">Enviar</button><button id="btnCerrar">Cerrar</button><button id="btnLoop">Loop</button><button id="btnLimpiar">Limpiar</button><br>
-	<ul id="ulMensajes"></ul>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>Prueba Web Sockets</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<h2>Conexión</h2>
+				idUsuario1 <input type="text" name="" id="idUsuario1" value="1"><br>
+				idUsuario2 <input type="text" name="" id="idUsuario2" value="1"><br>
+				<button id="btnConectarse">Conectarse</button>
+			</div>
+			<div class="col-md-6">
+				<h2>Conversación</h2>
+				idConversacion <input type="text" name="" id="idConversacion"><br>
+				idUsuario <input type="text" name="" id="idConversacionUsuario"><br>
+				Mensaje:<br>
+				<textarea id="texto"></textarea><br>
+				<button id="btnEnviar">Enviar</button><button id="btnCerrar">Cerrar</button><button id="btnLimpiar">Limpiar</button><br>
+				<ul id="ulMensajes"></ul>
+			</div>
+		</div>
+	</div>
 	<script type="text/javascript">    
 		$( document ).ready(function() {
 			var webSocket = null;
 			$("#btnConectarse").click(function(event){
-				var empresa_id = $("#idEmpresa").val();
-				var usuario_id = $("#idUSuario").val();
+				var usuario_id_1 = $("#idUsuario1").val();
+				var usuario_id_2 = $("#idUsuario2").val();
 				var conversacion_id = $("#idConversacion").val();
-				webSocket = $.simpleWebSocket({ url: 'ws://127.0.0.1:8888/ws/mensaje?nick=pp&tipo=subscritor&empresa_id=' + empresa_id + '&usuario_id=' + usuario_id});
+				webSocket = $.simpleWebSocket({ url: 'ws://127.0.0.1:8888/ws/mensaje?nick=pp&tipo=subscritor&usuario_id_1=' + usuario_id_1 + '&usuario_id_2=' + usuario_id_2});
 				webSocket.listen(function(message) {
 					console.log(message);
 					if(message["evento"] == "open"){
 						$("#idConversacion").val(message["conversacion_id"]);
 						var li = "<li>" + 'Conexión OK' + "</li>";
 						$("#ulMensajes").append(li);
+						for(var i = 0; i < message["mensajes"].length; i++){
+							var li = "<li>" + new Date(message["mensajes"][i]["momento"]) + " - " + message["mensajes"][i]["mensaje"] + "</li>";
+							$("#ulMensajes").append(li);
+						}
 					}
 					if(message["evento"] == "on_message"){
 						var li = "<li>" + message["mensaje"] + "</li>";
@@ -39,7 +61,8 @@
 		    $("#btnEnviar").click(function(event){
 				var mensaje = $("#texto").val();
 				var conversacion_id = $("#idConversacion").val();
-				webSocket.send({ 'mensaje': mensaje, 'conversacion_id':conversacion_id }).done(function(message) {
+				var usuario_id = $("#idConversacionUsuario").val();
+				webSocket.send({ 'mensaje': mensaje, 'conversacion_id':conversacion_id, 'usuarusuario_ida': usuario_id }).done(function(message) {
 					//console.log(message);
 				}).fail(function(message) {
 				    // error sending
@@ -48,12 +71,6 @@
 			});
 		    $("#btnCerrar").click(function(event){
 				webSocket.close();
-			});
-		    $("#btnLoop").click(function(event){
-		    	var webSocketLoop = $.simpleWebSocket({ url: 'ws://127.0.0.1:9282/'});
-				webSocketLoop.listen(function(message) {
-					console.log('LOOP!!!');
-				});
 			});
 		    $("#btnLimpiar").click(function(event){
 				$("#ulMensajes").empty();
